methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:8: error: ';' expected but 'for' found.
  } for(k<-1 to 6){
    ^